{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 744,
  "lineage": "5446a1be-8ed6-6276-0ae8-6a8515e55bbb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353750335352:vpc/vpc-36bf084c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-9a8e0ef6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-5a0e5e21",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-36bf084c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-ee4e7c91",
            "owner_id": "353750335352",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353750335352:security-group/sg-03acde282f6bfe9be",
            "description": "Security group for the vault-example launch configuration",
            "egress": [],
            "id": "sg-03acde282f6bfe9be",
            "ingress": [],
            "name": "vault-example20190627172246629800000003",
            "name_prefix": "vault-example",
            "owner_id": "353750335352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-36bf084c"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353750335352:security-group/sg-0c9fd27be7fad521d",
            "description": "Security group for the nomad-example-server launch configuration",
            "egress": [],
            "id": "sg-0c9fd27be7fad521d",
            "ingress": [],
            "name": "nomad-example-server20190627172246629800000005",
            "name_prefix": "nomad-example-server",
            "owner_id": "353750335352",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-36bf084c"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353750335352:security-group/sg-039ee92d6f6c9a74b",
            "description": "Security group for the consul-example launch configuration",
            "egress": [],
            "id": "sg-039ee92d6f6c9a74b",
            "ingress": [],
            "name": "consul-example20190627172246629800000006",
            "name_prefix": "consul-example",
            "owner_id": "353750335352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "consul-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-36bf084c"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2581055194",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03acde282f6bfe9be",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nomad_servers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1554260056",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c9fd27be7fad521d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2820874783",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_api_inbound_from_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8200,
            "id": "sgrule-2007553441",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03acde282f6bfe9be",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8200,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_api_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8400,
            "id": "sgrule-287374753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8400,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8400,
            "id": "sgrule-896580908",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8400,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cluster_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8201,
            "id": "sgrule-3127327417",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03acde282f6bfe9be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8201,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cluster_inbound_from_self_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8200,
            "id": "sgrule-3338698381",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03acde282f6bfe9be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8200,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8600,
            "id": "sgrule-430270316",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-2067246431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8600,
            "id": "sgrule-1735034356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-3748138672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8500,
            "id": "sgrule-4175082471",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-4293637685",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4646,
            "id": "sgrule-3503216543",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9fd27be7fad521d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4646,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_rpc_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4647,
            "id": "sgrule-854354844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9fd27be7fad521d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4647,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-58106035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-2087725028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03acde282f6bfe9be",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-1346749076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-1895575968",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03acde282f6bfe9be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-2109293099",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-46122364",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-03acde282f6bfe9be",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-4095369595",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-3567489615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-03acde282f6bfe9be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_tcp_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4648,
            "id": "sgrule-2370022474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9fd27be7fad521d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4648,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_udp_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4648,
            "id": "sgrule-4086058706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c9fd27be7fad521d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4648,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8302,
            "id": "sgrule-4267729655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8302,
            "id": "sgrule-3622571720",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8302,
            "id": "sgrule-2158985327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8302,
            "id": "sgrule-1941155111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8300,
            "id": "sgrule-3780385968",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8300,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8300,
            "id": "sgrule-757237408",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8300,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2069477715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9fd27be7fad521d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1906291059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039ee92d6f6c9a74b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2792665117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03acde282f6bfe9be",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}